# pokemon-jp-summariser

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLEANUP_SUMMARY.md  COMPLIANCE_CHECKLIST.md  CORRECTIONS_SYSTEM_IMPROVEMENTS.md  CRITICAL_FIXES_SUMMARY.md  DEPLOYMENT_FIXES.md  EV_EXPLANATION_IMPROVEMENTS.md  GEMINI_SETUP.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  SECURITY.md  SECURITY_INCIDENT.md  SECURITY_VERIFICATION.md  Summarise_Article.py  VGC_Format_Handling_Strategy.md  app.py  app_temp_backup.py  cache_manager.py  comprehensive_image_debug.json  config.py  corrected_ev_test.py  debug_note_com.py  ev_pattern_search.txt  h --force-with-lease origin streamlit-app  health_check.py  image_analysis_results.txt  image_analyzer.py  image_debug.py  launch-react.bat  launch-streamlit.bat  liberty_note_test_result.json  linkedin.md  pokemon_jp_translator.ipynb  pyproject.toml  requirements.txt  run.py  scraped_content.txt  (+23 more)
.claude/: settings.local.json
.claude/agents/: counter-team-builder.md  ev-spread-optimizer.md  pokemon-meta-analyzer.md  vgc-matchup-calculator.md  vgc-team-analyzer.md
.devcontainer/: devcontainer.json
.streamlit/: config.toml  credentials.yaml
app/: streamlit_app.py
app/backend/: compliance.py  fetcher.py  gemini_client.py  main.py  rate_limit.py  safety.py
app/shared/: logging.py  models.py
backend-api/: README.md  requirements.txt  server.py
calculations/: __init__.py  damage_calc.py  speed_tiers.py
database/: crud.py  models.py
docs/: API.md  ARCHITECTURE.md  CLAUDE.md  README.md
pages/: Pokémon_Team_and_Summary_Search.py
react-app/: .env  .env.example  API_SETUP.md  README.md  package-lock.json  package.json  server.js  tailwind.config.js  vite.config.ts
react-app/src/: App.tsx  index.css  main.tsx
react-app/src/components/: ErrorFallback.tsx  LoadingSpinner.tsx  Navigation.tsx  ProtectedRoute.tsx  PublicRoute.tsx
react-app/src/context/: AnalyticsContext.tsx  AuthContext.tsx  ThemeContext.tsx
react-app/src/hooks/: useGemini.ts
react-app/src/pages/: Analytics.tsx  Home.tsx  Login.tsx  Profile.tsx  Register.tsx  Summarizer.tsx  TeamSearch.tsx
react-app/src/services/: geminiService.ts
react-app/src/utils/: performance.ts
scripts/: Procfile  README.md  deploy.bat  deploy.sh  launch-react.bat  launch-react.sh  launch-streamlit.bat  launch-streamlit.sh  netlify.toml  performance_test.py
shared/: README.md  __init__.py
shared/config/: config_loader.py
shared/constants/: pokemon.py  pokemon_data.py
shared/prompts/: vgc_analysis_prompt.py
shared/types/: pokemon.py
shared/utils/: llm_utils.py  shared_utils.py
shared/validators/: __init__.py  url_validator.py
src/: __init__.py  app.py
src/core/: __init__.py  analyzer.py  pokemon_validator.py  scraper.py
src/database/: crud.py  models.py
src/ui/: __init__.py  components.py  pages.py
src/utils/: __init__.py  cache_manager.py  config.py  image_analyzer.py  utils.py
storage/: cache.json
streamlit-app/: .flake8  EXPERIMENTAL_FEATURES.md  FEEDBACK_SYSTEM_GUIDE.md  README.md  SETUP.md  Summarise_Article.py  VGC_FORMAT_STRATEGY.md  pokemon_card_display.py  pyproject.toml  requirements.txt  style.css  summarize_function.py  test_experimental.py  test_move_parsing.py  test_parsing.py
streamlit-app/.streamlit/: config.toml  secrets.toml  secrets.toml.example
streamlit-app/components/: __init__.py  auth_ui.py  global_styles.py  navigation.py  onboarding.py
streamlit-app/pages/: Analytics_Dashboard.py  Experimental_Prompts.py  Help_and_Guide.py  LLM_Model_Selection.py  Personal_Workspace.py
streamlit-app/static/: sidebar_fix.js
streamlit-app/storage/: analytics.json  cache.json  cache.json.backup  secret_key.txt  sessions.json  users.json  workspace.json
streamlit-app/utils/: analytics.py  auth.py  cache.py  corrections.py  data_validation.py  enhanced_error_handling.py  error_handler.py  error_recovery.py  experimental_prompts.py  gemini_summary.py  llm_summary.py  logger.py  ollama_summary.py  permalinks.py  progressive_loading.py  shared_utils.py  user_experience.py  user_preferences.py  vgc_format_config.py  vgc_format_utils.py  vgc_formats.json  workspace.py
tests/: __init__.py  simple_translation_test.py  test_integration.py
utils/: llm_summary.py
